# todo-actix

./: .env  Cargo.toml  docker-compose.yml  readme.md
entity/: Cargo.toml
entity/src/: todo.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs  models.rs  settings.rs
src/models/: settings.rs
src/models/settings/: consul.rs  database.rs  mod.rs  server.rs  tracing.rs
src/server/: _server.rs  mod.rs
src/server/_docs/: _api_description.md  _create_api_docs.rs  _create_swagger_ui.rs  mod.rs
src/server/_models/: app_state.rs  error_response.rs  mod.rs
src/server/_services/: _services.rs  healthcheck.rs  mod.rs
src/server/_services/default_service/: mod.rs
src/server/_services/healthcheck/: mod.rs  model.rs
src/server/_services/todo/: mod.rs
src/server/_services/todo/create/: mod.rs
src/server/_services/todo/get/: mod.rs  model.rs
src/server/_services/todo/list/: mod.rs
src/server/_services/v1/: mod.rs
src/server/_services/v1/todo/: model.rs
src/server/_services/v1/todo/create/: mod.rs  model.rs
src/server/_services/v1/todo/delete/: mod.rs  model.rs
src/server/_services/v1/todo/get/: mod.rs
src/server/_services/v1/todo/list/: constants.rs  mod.rs  model.rs
src/server/_services/v1/todo/update/: mod.rs  model.rs
src/utils/: consul.rs  database.rs  mod.rs  tracing.rs
