[package]
name = "todo-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
# Internal dependencies
entity = { path = "entity" }
# migration = { path = "migration" }

# External dependencies
actix-web = "^4"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
dotenv = "^0"
config = "^0"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros", "debug-print" ] }
utoipa = { version = "^1", features = ["actix_extras", "json"] }
utoipa-swagger-ui = { version = "^1", features = ["actix-web"] }
chrono = "^0"
tracing = "^0"
tracing-subscriber = {version = "^0", features = ["registry", "json", "env-filter", "ansi"]}
tracing-log = "^0"
tracing-actix-web = {version = "^0", features = ["opentelemetry_0_17"]}
tracing-bunyan-formatter = "^0"
tracing-opentelemetry = { version = "^0" }
opentelemetry = { version = "^0", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "^0", features = ["rt-tokio-current-thread"] }

[dev-dependencies]
# cargo-watch = "^8"
# sea-orm-cli = "^0"