[package]
name = "todo-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
# Internal dependencies
entity = { path = "entity" }
# migration = { path = "migration" }

# External dependencies

## Web framework
actix-web = "^4"
utoipa = { version = "^1", features = ["actix_extras", "json"] } # Openapi spec generator
utoipa-swagger-ui = { version = "^1", features = ["actix-web"] }

## Serialization / deserialization
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

## Load .env file
dotenv = "^0"

## Parse config file and environment variables into struct
config = "^0"

## Orm
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros", "debug-print" ] }

## Date and time utils
chrono = "^0"

## Tracing
tracing = "^0"
tracing-subscriber = {version = "^0", features = ["registry", "json", "env-filter", "ansi"]}
tracing-log = "^0"
tracing-actix-web = {version = "^0", features = ["opentelemetry_0_17"]}
tracing-bunyan-formatter = "^0"
tracing-opentelemetry = { version = "^0" }
opentelemetry = { version = "^0", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "^0", features = ["rt-tokio-current-thread"] }

## Sentry
sentry = "^0"
sentry-actix = "^0"
sentry-tracing = "^0"

[dev-dependencies]
# cargo-watch = "^8"
# sea-orm-cli = "^0"